--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "abstra-functions-cli",
+  "name": "abstra-cli",
   "version": "1.0.0",
   "description": "Instant deploy any function with abstra",
   "main": "src/index.js",
@@ -9,17 +9,20 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/abstra-app/abstra-functions-cli.git"
+    "url": "git+https://github.com/abstra-app/abstra-cli.git"
   },
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/abstra-app/abstra-functions-cli/issues"
+    "url": "https://github.com/abstra-app/abstra-cli/issues"
   },
-  "homepage": "https://github.com/abstra-app/abstra-functions-cli#readme",
+  "homepage": "https://github.com/abstra-app/abstra-cli#readme",
   "dependencies": {
     "adm-zip": "^0.4.16",
     "esprima": "^4.0.1",
     "node-fetch": "^2.6.1"
+  },
+  "bin": {
+    "abstra": "./src/index.js"
   }
 }
